---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: tuple_destructuring.cm
============================================================
Source code:
// Test tuple destructuring in MIR generation

fn test_basic_tuple_destructuring() -> felt {
    let (x, y) = (10, 20);
    return x + y;
}

fn get_pair() -> (felt, felt) {
    return (100, 200);
}

fn test_tuple_destructuring_from_function() -> felt {
    let (a, b) = get_pair();
    return a + b;
}

============================================================
Generated CASM:
test_basic_tuple_destructuring:
test_basic_tuple_destructuring:
test_basic_tuple_destructuring_0:
   0: 9 10 0 _             // [fp + 0] = 10
   1: 9 20 1 _             // [fp + 1] = 20
   2: 0 0 1 -3             // [fp + -3] = [fp + 0] op [fp + 1]
   3: 11 _ _ _             // return
get_pair:
get_pair:
get_pair_0:
   4: 9 100 -4 _           // Return value 0: [fp -4] = 100
   5: 9 200 -3 _           // Return value 1: [fp -3] = 200
   6: 11 _ _ _             // return
test_tuple_destructuring_from_function:
test_tuple_destructuring_from_function:
test_tuple_destructuring_from_function_0:
   7: 10 5 4 _             // call get_pair
   8: 0 3 4 -3             // [fp + -3] = [fp + 3] op [fp + 4]
   9: 11 _ _ _             // return
